Fixed horiontal scrollbar on windows browsers when using vw unit.

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -9,6 +9,10 @@ html, html a {
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .primary, .secondary {
 	position: relative;
 	text-align: center;
